bison/y.output
Terminals unused in grammar

   END
   ERR


State 25 conflicts: 1 shift/reduce
State 32 conflicts: 18 shift/reduce
State 38 conflicts: 2 shift/reduce
State 39 conflicts: 2 shift/reduce
State 46 conflicts: 17 shift/reduce
State 55 conflicts: 1 shift/reduce
State 65 conflicts: 2 shift/reduce
State 113 conflicts: 2 shift/reduce
State 120 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: start code
    2      | code

    3 code: DOCCLASS preamble BEGINDOC body ENDDOC

    4 preamble: preamble usepackage
    5         | preamble author
    6         | preamble titletype
    7         | /* empty */

    8 usepackage: USEPACKAGE LCBR math RCBR
    9           | USEPACKAGE LSBR math RSBR LCBR math RCBR
   10           | USEPACKAGE LCBR RCBR
   11           | USEPACKAGE LSBR RSBR LCBR RCBR
   12           | math

   13 title: titletype title
   14      | titletype
   15      | author title
   16      | author

   17 titletype: TITLE LCBR math RCBR
   18          | TITLE LCBR RCBR
   19          | TITLE LSBR math RSBR LCBR math RCBR
   20          | TITLE LCBR math RCBR LSBR math RSBR LCBR math RCBR
   21          | TITLE LSBR RSBR LCBR RCBR

   22 author: AUTHOR LCBR math RCBR
   23       | AUTHOR LCBR RCBR

   24 body: part body
   25     | part

   26 textenvir: text textenvir
   27          | text

   28 text: LCBR math RCBR
   29     | LSBR math RSBR

   30 part: math
   31     | title

   32 math: operand
   33     | LSKF math RSKF

   34 operand: operand LCBR RCBR
   35        | operand LCBR math RCBR
   36        | operand SPACE LCBR math RCBR
   37        | operand LCBR operand RCBR
   38        | operand LSBR math RSBR
   39        | operand environment
   40        | operand textoption
   41        | operand if
   42        | SPACE LCBR math RCBR
   43        | LCBR operand RCBR
   44        | LSBR math RSBR
   45        | environment
   46        | textoption
   47        | if
   48        | operand POW math
   49        | operand POW LCBR math RCBR
   50        | operand POW LCBR math RCBR LCBR math RCBR
   51        | operand POW LCBR RCBR LCBR math RCBR
   52        | operand POW LCBR math RCBR LCBR RCBR
   53        | operand POW LCBR RCBR LCBR RCBR
   54        | operand INDEX math
   55        | operand INDEX LCBR math RCBR
   56        | operand INDEX LCBR math RCBR LCBR math RCBR
   57        | operand INDEX LCBR RCBR LCBR math RCBR
   58        | operand INDEX LCBR math RCBR LCBR RCBR
   59        | operand INDEX LCBR RCBR LCBR RCBR

   60 if: IF math ENDIF

   61 environment: BEGINENV textenvir ENDENV textenvir
   62            | BEGINENV textenvir body ENDENV textenvir
   63            | BEGINENV textenvir LCBR body RCBR ENDENV textenvir
   64            | LCBR BEGINENV LCBR textoption RCBR math RCBR
   65            | LCBR math BEGINENV LCBR textoption RCBR RCBR
   66            | LCBR BEGINENV LCBR textoption RCBR RCBR
   67            | LCBR ENDENV LCBR textoption RCBR math RCBR
   68            | LCBR math ENDENV LCBR textoption RCBR RCBR
   69            | LCBR ENDENV LCBR textoption RCBR RCBR

   70 textoption: WORD
   71           | BSL LCBR WORD BSL RCBR
   72           | FORMAT
   73           | OPERATOR
   74           | NEWPAGE
   75           | MAKETITLE
   76           | INPUT LCBR math RCBR
   77           | INPUT LSBR math RSBR LCBR math RCBR
   78           | INPUT LSBR RSBR LCBR math RCBR
   79           | INPUT LSBR RSBR LCBR RCBR
   80           | INPUT LSBR math RSBR LCBR RCBR
   81           | INPUT LSBR math RSBR LSBR math RSBR LCBR math RCBR
   82           | INPUT LSBR math RSBR LSBR math RSBR LSBR math RSBR LCBR math RCBR
   83           | FORMAT LCBR math RCBR
   84           | LSBR OPERATOR RSBR
   85           | INTEGER
   86           | SPECCHAR
   87           | BSL WORD
   88           | TABLEOFCONT
   89           | MATH
   90           | BSL OPERATOR
   91           | LSBR RSBR


Terminals, with rules where they appear

$end (0) 0
error (256)
SPACE (258) 36 42
OPERATOR (259) 73 84 90
SPECCHAR (260) 86
BEGINDOC (261) 3
ENDDOC (262) 3
DOCCLASS (263) 3
LCBR (264) 8 9 10 11 17 18 19 20 21 22 23 28 34 35 36 37 42 43 49 50
    51 52 53 55 56 57 58 59 63 64 65 66 67 68 69 71 76 77 78 79 80
    81 82 83
RCBR (265) 8 9 10 11 17 18 19 20 21 22 23 28 34 35 36 37 42 43 49 50
    51 52 53 55 56 57 58 59 63 64 65 66 67 68 69 71 76 77 78 79 80
    81 82 83
TITLE (266) 17 18 19 20 21
POW (267) 48 49 50 51 52 53
END (268)
USEPACKAGE (269) 8 9 10 11
MAKETITLE (270) 75
AUTHOR (271) 22 23
INDEX (272) 54 55 56 57 58 59
TABLEOFCONT (273) 88
MATH (274) 89
BSL (275) 71 87 90
LSBR (276) 9 11 19 20 21 29 38 44 77 78 79 80 81 82 84 91
RSBR (277) 9 11 19 20 21 29 38 44 77 78 79 80 81 82 84 91
NEWPAGE (278) 74
INPUT (279) 76 77 78 79 80 81 82
LSKF (280) 33
RSKF (281) 33
ENDIF (282) 60
IF (283) 60
BEGINENV (284) 61 62 63 64 65 66
ENDENV (285) 61 62 63 67 68 69
ERR (286)
FORMAT (287) 72 83
INTEGER (288) 85
WORD (289) 70 71 87


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
start (36)
    on left: 1 2, on right: 0 1
code (37)
    on left: 3, on right: 1 2
preamble (38)
    on left: 4 5 6 7, on right: 3 4 5 6
usepackage (39)
    on left: 8 9 10 11 12, on right: 4
title (40)
    on left: 13 14 15 16, on right: 13 15 31
titletype (41)
    on left: 17 18 19 20 21, on right: 6 13 14
author (42)
    on left: 22 23, on right: 5 15 16
body (43)
    on left: 24 25, on right: 3 24 62 63
textenvir (44)
    on left: 26 27, on right: 26 61 62 63
text (45)
    on left: 28 29, on right: 26 27
part (46)
    on left: 30 31, on right: 24 25
math (47)
    on left: 32 33, on right: 8 9 12 17 19 20 22 28 29 30 33 35 36
    38 42 44 48 49 50 51 52 54 55 56 57 58 60 64 65 67 68 76 77 78
    80 81 82 83
operand (48)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 57 58 59, on right: 32 34 35 36 37 38 39 40 41 43
    48 49 50 51 52 53 54 55 56 57 58 59
if (49)
    on left: 60, on right: 41 47
environment (50)
    on left: 61 62 63 64 65 66 67 68 69, on right: 39 45
textoption (51)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91, on right: 40 46 64 65 66 67 68 69


State 0

    0 $accept: . start $end

    DOCCLASS  shift, and go to state 1

    start  go to state 2
    code   go to state 3


State 1

    3 code: DOCCLASS . preamble BEGINDOC body ENDDOC

    $default  reduce using rule 7 (preamble)

    preamble  go to state 4


State 2

    0 $accept: start . $end
    1 start: start . code

    $end      shift, and go to state 5
    DOCCLASS  shift, and go to state 1

    code  go to state 6


State 3

    2 start: code .

    $default  reduce using rule 2 (start)


State 4

    3 code: DOCCLASS preamble . BEGINDOC body ENDDOC
    4 preamble: preamble . usepackage
    5         | preamble . author
    6         | preamble . titletype

    SPACE        shift, and go to state 7
    OPERATOR     shift, and go to state 8
    SPECCHAR     shift, and go to state 9
    BEGINDOC     shift, and go to state 10
    LCBR         shift, and go to state 11
    TITLE        shift, and go to state 12
    USEPACKAGE   shift, and go to state 13
    MAKETITLE    shift, and go to state 14
    AUTHOR       shift, and go to state 15
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 19
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    LSKF         shift, and go to state 22
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 24
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    usepackage   go to state 28
    titletype    go to state 29
    author       go to state 30
    math         go to state 31
    operand      go to state 32
    if           go to state 33
    environment  go to state 34
    textoption   go to state 35


State 5

    0 $accept: start $end .

    $default  accept


State 6

    1 start: start code .

    $default  reduce using rule 1 (start)


State 7

   42 operand: SPACE . LCBR math RCBR

    LCBR  shift, and go to state 36


State 8

   73 textoption: OPERATOR .

    $default  reduce using rule 73 (textoption)


State 9

   86 textoption: SPECCHAR .

    $default  reduce using rule 86 (textoption)


State 10

    3 code: DOCCLASS preamble BEGINDOC . body ENDDOC

    SPACE        shift, and go to state 7
    OPERATOR     shift, and go to state 8
    SPECCHAR     shift, and go to state 9
    LCBR         shift, and go to state 11
    TITLE        shift, and go to state 12
    MAKETITLE    shift, and go to state 14
    AUTHOR       shift, and go to state 15
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 19
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    LSKF         shift, and go to state 22
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 24
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    title        go to state 37
    titletype    go to state 38
    author       go to state 39
    body         go to state 40
    part         go to state 41
    math         go to state 42
    operand      go to state 32
    if           go to state 33
    environment  go to state 34
    textoption   go to state 35


State 11

   43 operand: LCBR . operand RCBR
   64 environment: LCBR . BEGINENV LCBR textoption RCBR math RCBR
   65            | LCBR . math BEGINENV LCBR textoption RCBR RCBR
   66            | LCBR . BEGINENV LCBR textoption RCBR RCBR
   67            | LCBR . ENDENV LCBR textoption RCBR math RCBR
   68            | LCBR . math ENDENV LCBR textoption RCBR RCBR
   69            | LCBR . ENDENV LCBR textoption RCBR RCBR

    SPACE        shift, and go to state 7
    OPERATOR     shift, and go to state 8
    SPECCHAR     shift, and go to state 9
    LCBR         shift, and go to state 11
    MAKETITLE    shift, and go to state 14
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 19
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    LSKF         shift, and go to state 22
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 43
    ENDENV       shift, and go to state 44
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    math         go to state 45
    operand      go to state 46
    if           go to state 33
    environment  go to state 34
    textoption   go to state 35


State 12

   17 titletype: TITLE . LCBR math RCBR
   18          | TITLE . LCBR RCBR
   19          | TITLE . LSBR math RSBR LCBR math RCBR
   20          | TITLE . LCBR math RCBR LSBR math RSBR LCBR math RCBR
   21          | TITLE . LSBR RSBR LCBR RCBR

    LCBR  shift, and go to state 47
    LSBR  shift, and go to state 48


State 13

    8 usepackage: USEPACKAGE . LCBR math RCBR
    9           | USEPACKAGE . LSBR math RSBR LCBR math RCBR
   10           | USEPACKAGE . LCBR RCBR
   11           | USEPACKAGE . LSBR RSBR LCBR RCBR

    LCBR  shift, and go to state 49
    LSBR  shift, and go to state 50


State 14

   75 textoption: MAKETITLE .

    $default  reduce using rule 75 (textoption)


State 15

   22 author: AUTHOR . LCBR math RCBR
   23       | AUTHOR . LCBR RCBR

    LCBR  shift, and go to state 51


State 16

   88 textoption: TABLEOFCONT .

    $default  reduce using rule 88 (textoption)


State 17

   89 textoption: MATH .

    $default  reduce using rule 89 (textoption)


State 18

   71 textoption: BSL . LCBR WORD BSL RCBR
   87           | BSL . WORD
   90           | BSL . OPERATOR

    OPERATOR  shift, and go to state 52
    LCBR      shift, and go to state 53
    WORD      shift, and go to state 54


State 19

   44 operand: LSBR . math RSBR
   84 textoption: LSBR . OPERATOR RSBR
   91           | LSBR . RSBR

    SPACE        shift, and go to state 7
    OPERATOR     shift, and go to state 55
    SPECCHAR     shift, and go to state 9
    LCBR         shift, and go to state 11
    MAKETITLE    shift, and go to state 14
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 19
    RSBR         shift, and go to state 56
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    LSKF         shift, and go to state 22
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 24
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    math         go to state 57
    operand      go to state 32
    if           go to state 33
    environment  go to state 34
    textoption   go to state 35


State 20

   74 textoption: NEWPAGE .

    $default  reduce using rule 74 (textoption)


State 21

   76 textoption: INPUT . LCBR math RCBR
   77           | INPUT . LSBR math RSBR LCBR math RCBR
   78           | INPUT . LSBR RSBR LCBR math RCBR
   79           | INPUT . LSBR RSBR LCBR RCBR
   80           | INPUT . LSBR math RSBR LCBR RCBR
   81           | INPUT . LSBR math RSBR LSBR math RSBR LCBR math RCBR
   82           | INPUT . LSBR math RSBR LSBR math RSBR LSBR math RSBR LCBR math RCBR

    LCBR  shift, and go to state 58
    LSBR  shift, and go to state 59


State 22

   33 math: LSKF . math RSKF

    SPACE        shift, and go to state 7
    OPERATOR     shift, and go to state 8
    SPECCHAR     shift, and go to state 9
    LCBR         shift, and go to state 11
    MAKETITLE    shift, and go to state 14
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 19
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    LSKF         shift, and go to state 22
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 24
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    math         go to state 60
    operand      go to state 32
    if           go to state 33
    environment  go to state 34
    textoption   go to state 35


State 23

   60 if: IF . math ENDIF

    SPACE        shift, and go to state 7
    OPERATOR     shift, and go to state 8
    SPECCHAR     shift, and go to state 9
    LCBR         shift, and go to state 11
    MAKETITLE    shift, and go to state 14
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 19
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    LSKF         shift, and go to state 22
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 24
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    math         go to state 61
    operand      go to state 32
    if           go to state 33
    environment  go to state 34
    textoption   go to state 35


State 24

   61 environment: BEGINENV . textenvir ENDENV textenvir
   62            | BEGINENV . textenvir body ENDENV textenvir
   63            | BEGINENV . textenvir LCBR body RCBR ENDENV textenvir

    LCBR  shift, and go to state 62
    LSBR  shift, and go to state 63

    textenvir  go to state 64
    text       go to state 65


State 25

   72 textoption: FORMAT .
   83           | FORMAT . LCBR math RCBR

    LCBR  shift, and go to state 66

    LCBR      [reduce using rule 72 (textoption)]
    $default  reduce using rule 72 (textoption)


State 26

   85 textoption: INTEGER .

    $default  reduce using rule 85 (textoption)


State 27

   70 textoption: WORD .

    $default  reduce using rule 70 (textoption)


State 28

    4 preamble: preamble usepackage .

    $default  reduce using rule 4 (preamble)


State 29

    6 preamble: preamble titletype .

    $default  reduce using rule 6 (preamble)


State 30

    5 preamble: preamble author .

    $default  reduce using rule 5 (preamble)


State 31

   12 usepackage: math .

    $default  reduce using rule 12 (usepackage)


State 32

   32 math: operand .
   34 operand: operand . LCBR RCBR
   35        | operand . LCBR math RCBR
   36        | operand . SPACE LCBR math RCBR
   37        | operand . LCBR operand RCBR
   38        | operand . LSBR math RSBR
   39        | operand . environment
   40        | operand . textoption
   41        | operand . if
   48        | operand . POW math
   49        | operand . POW LCBR math RCBR
   50        | operand . POW LCBR math RCBR LCBR math RCBR
   51        | operand . POW LCBR RCBR LCBR math RCBR
   52        | operand . POW LCBR math RCBR LCBR RCBR
   53        | operand . POW LCBR RCBR LCBR RCBR
   54        | operand . INDEX math
   55        | operand . INDEX LCBR math RCBR
   56        | operand . INDEX LCBR math RCBR LCBR math RCBR
   57        | operand . INDEX LCBR RCBR LCBR math RCBR
   58        | operand . INDEX LCBR math RCBR LCBR RCBR
   59        | operand . INDEX LCBR RCBR LCBR RCBR

    SPACE        shift, and go to state 67
    OPERATOR     shift, and go to state 8
    SPECCHAR     shift, and go to state 9
    LCBR         shift, and go to state 68
    POW          shift, and go to state 69
    MAKETITLE    shift, and go to state 14
    INDEX        shift, and go to state 70
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 71
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 24
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    SPACE        [reduce using rule 32 (math)]
    OPERATOR     [reduce using rule 32 (math)]
    SPECCHAR     [reduce using rule 32 (math)]
    LCBR         [reduce using rule 32 (math)]
    POW          [reduce using rule 32 (math)]
    MAKETITLE    [reduce using rule 32 (math)]
    INDEX        [reduce using rule 32 (math)]
    TABLEOFCONT  [reduce using rule 32 (math)]
    MATH         [reduce using rule 32 (math)]
    BSL          [reduce using rule 32 (math)]
    LSBR         [reduce using rule 32 (math)]
    NEWPAGE      [reduce using rule 32 (math)]
    INPUT        [reduce using rule 32 (math)]
    IF           [reduce using rule 32 (math)]
    BEGINENV     [reduce using rule 32 (math)]
    FORMAT       [reduce using rule 32 (math)]
    INTEGER      [reduce using rule 32 (math)]
    WORD         [reduce using rule 32 (math)]
    $default     reduce using rule 32 (math)

    if           go to state 72
    environment  go to state 73
    textoption   go to state 74


State 33

   47 operand: if .

    $default  reduce using rule 47 (operand)


State 34

   45 operand: environment .

    $default  reduce using rule 45 (operand)


State 35

   46 operand: textoption .

    $default  reduce using rule 46 (operand)


State 36

   42 operand: SPACE LCBR . math RCBR

    SPACE        shift, and go to state 7
    OPERATOR     shift, and go to state 8
    SPECCHAR     shift, and go to state 9
    LCBR         shift, and go to state 11
    MAKETITLE    shift, and go to state 14
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 19
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    LSKF         shift, and go to state 22
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 24
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    math         go to state 75
    operand      go to state 32
    if           go to state 33
    environment  go to state 34
    textoption   go to state 35


State 37

   31 part: title .

    $default  reduce using rule 31 (part)


State 38

   13 title: titletype . title
   14      | titletype .

    TITLE   shift, and go to state 12
    AUTHOR  shift, and go to state 15

    TITLE     [reduce using rule 14 (title)]
    AUTHOR    [reduce using rule 14 (title)]
    $default  reduce using rule 14 (title)

    title      go to state 76
    titletype  go to state 38
    author     go to state 39


State 39

   15 title: author . title
   16      | author .

    TITLE   shift, and go to state 12
    AUTHOR  shift, and go to state 15

    TITLE     [reduce using rule 16 (title)]
    AUTHOR    [reduce using rule 16 (title)]
    $default  reduce using rule 16 (title)

    title      go to state 77
    titletype  go to state 38
    author     go to state 39


State 40

    3 code: DOCCLASS preamble BEGINDOC body . ENDDOC

    ENDDOC  shift, and go to state 78


State 41

   24 body: part . body
   25     | part .

    SPACE        shift, and go to state 7
    OPERATOR     shift, and go to state 8
    SPECCHAR     shift, and go to state 9
    LCBR         shift, and go to state 11
    TITLE        shift, and go to state 12
    MAKETITLE    shift, and go to state 14
    AUTHOR       shift, and go to state 15
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 19
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    LSKF         shift, and go to state 22
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 24
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    $default  reduce using rule 25 (body)

    title        go to state 37
    titletype    go to state 38
    author       go to state 39
    body         go to state 79
    part         go to state 41
    math         go to state 42
    operand      go to state 32
    if           go to state 33
    environment  go to state 34
    textoption   go to state 35


State 42

   30 part: math .

    $default  reduce using rule 30 (part)


State 43

   61 environment: BEGINENV . textenvir ENDENV textenvir
   62            | BEGINENV . textenvir body ENDENV textenvir
   63            | BEGINENV . textenvir LCBR body RCBR ENDENV textenvir
   64            | LCBR BEGINENV . LCBR textoption RCBR math RCBR
   66            | LCBR BEGINENV . LCBR textoption RCBR RCBR

    LCBR  shift, and go to state 80
    LSBR  shift, and go to state 63

    textenvir  go to state 64
    text       go to state 65


State 44

   67 environment: LCBR ENDENV . LCBR textoption RCBR math RCBR
   69            | LCBR ENDENV . LCBR textoption RCBR RCBR

    LCBR  shift, and go to state 81


State 45

   65 environment: LCBR math . BEGINENV LCBR textoption RCBR RCBR
   68            | LCBR math . ENDENV LCBR textoption RCBR RCBR

    BEGINENV  shift, and go to state 82
    ENDENV    shift, and go to state 83


State 46

   32 math: operand .
   34 operand: operand . LCBR RCBR
   35        | operand . LCBR math RCBR
   36        | operand . SPACE LCBR math RCBR
   37        | operand . LCBR operand RCBR
   38        | operand . LSBR math RSBR
   39        | operand . environment
   40        | operand . textoption
   41        | operand . if
   43        | LCBR operand . RCBR
   48        | operand . POW math
   49        | operand . POW LCBR math RCBR
   50        | operand . POW LCBR math RCBR LCBR math RCBR
   51        | operand . POW LCBR RCBR LCBR math RCBR
   52        | operand . POW LCBR math RCBR LCBR RCBR
   53        | operand . POW LCBR RCBR LCBR RCBR
   54        | operand . INDEX math
   55        | operand . INDEX LCBR math RCBR
   56        | operand . INDEX LCBR math RCBR LCBR math RCBR
   57        | operand . INDEX LCBR RCBR LCBR math RCBR
   58        | operand . INDEX LCBR math RCBR LCBR RCBR
   59        | operand . INDEX LCBR RCBR LCBR RCBR

    SPACE        shift, and go to state 67
    OPERATOR     shift, and go to state 8
    SPECCHAR     shift, and go to state 9
    LCBR         shift, and go to state 68
    RCBR         shift, and go to state 84
    POW          shift, and go to state 69
    MAKETITLE    shift, and go to state 14
    INDEX        shift, and go to state 70
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 71
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 24
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    SPACE        [reduce using rule 32 (math)]
    OPERATOR     [reduce using rule 32 (math)]
    SPECCHAR     [reduce using rule 32 (math)]
    LCBR         [reduce using rule 32 (math)]
    RCBR         [reduce using rule 32 (math)]
    MAKETITLE    [reduce using rule 32 (math)]
    TABLEOFCONT  [reduce using rule 32 (math)]
    MATH         [reduce using rule 32 (math)]
    BSL          [reduce using rule 32 (math)]
    LSBR         [reduce using rule 32 (math)]
    NEWPAGE      [reduce using rule 32 (math)]
    INPUT        [reduce using rule 32 (math)]
    IF           [reduce using rule 32 (math)]
    BEGINENV     [reduce using rule 32 (math)]
    FORMAT       [reduce using rule 32 (math)]
    INTEGER      [reduce using rule 32 (math)]
    WORD         [reduce using rule 32 (math)]
    $default     reduce using rule 32 (math)

    if           go to state 72
    environment  go to state 73
    textoption   go to state 74


State 47

   17 titletype: TITLE LCBR . math RCBR
   18          | TITLE LCBR . RCBR
   20          | TITLE LCBR . math RCBR LSBR math RSBR LCBR math RCBR

    SPACE        shift, and go to state 7
    OPERATOR     shift, and go to state 8
    SPECCHAR     shift, and go to state 9
    LCBR         shift, and go to state 11
    RCBR         shift, and go to state 85
    MAKETITLE    shift, and go to state 14
    TABLEOFCONT  shift, and go to state 16
    MATH         shift, and go to state 17
    BSL          shift, and go to state 18
    LSBR         shift, and go to state 19
    NEWPAGE      shift, and go to state 20
    INPUT        shift, and go to state 21
    LSKF         shift, and go to state 22
    IF           shift, and go to state 23
    BEGINENV     shift, and go to state 24
    FORMAT       shift, and go to state 25
    INTEGER      shift, and go to state 26
    WORD         shift, and go to state 27

    math         go to state 86
    operand      go to state 32
    if           go to state 33
    environment  go to state 34
    textoption   go to state 35


State 48

   19 titletype: TITLE LSBR . math RSBR LCBR math RCBR
   21          | TITLE LSBR . RSBR LCBR RCBR
